@@ -24,6 +24,7 @@ import org.assertj.core.api.Assertions;
 import org.graylog.datanode.Configuration;
 import org.graylog.datanode.configuration.DatanodeDirectories;
 import org.graylog.datanode.configuration.GCSRepositoryConfiguration;
+import org.graylog.datanode.configuration.HdfsRepositoryConfiguration;
 import org.graylog.datanode.configuration.OpensearchConfigurationException;
 import org.graylog.datanode.configuration.S3RepositoryConfiguration;
 import org.graylog.datanode.opensearch.configuration.OpensearchConfigurationParams;
@@ -58,12 +59,13 @@ class SearchableSnapshotsConfigurationBeanTest {
                 datanodeDirectories(tempDir),
                 config,
                 new GCSRepositoryConfiguration(),
+                new HdfsRepositoryConfiguration(),
                 () -> new OpensearchUsableSpace(tempDir, 20L * 1024 * 1024 * 1024));
 
-        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams());
+        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams(tempDir));
 
         Assertions.assertThat(configurationPart.nodeRoles())
-                .contains(SearchableSnapshotsConfigurationBean.SEARCH_NODE_ROLE);
+                .contains(OpensearchNodeRole.SEARCH);
 
         Assertions.assertThat(configurationPart.keystoreItems())
                 .map(OpensearchKeystoreItem::key)
@@ -96,12 +98,13 @@ class SearchableSnapshotsConfigurationBeanTest {
                 datanodeDirectories(tempDir),
                 config,
                 gcsRepositoryConfiguration,
+                new HdfsRepositoryConfiguration(),
                 () -> new OpensearchUsableSpace(tempDir, 20L * 1024 * 1024 * 1024));
 
-        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams());
+        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams(tempDir));
 
         Assertions.assertThat(configurationPart.nodeRoles())
-                .contains(SearchableSnapshotsConfigurationBean.SEARCH_NODE_ROLE);
+                .contains(OpensearchNodeRole.SEARCH);
 
         Assertions.assertThat(configurationPart.keystoreItems())
                 .hasSize(1)
@@ -112,36 +115,64 @@ class SearchableSnapshotsConfigurationBeanTest {
                 .containsEntry("node.search.cache.size", "10gb");
     }
 
-    private OpensearchConfigurationParams emptyBuildParams() {
-        return new OpensearchConfigurationParams(Collections.emptyList(), Collections.emptyMap());
+    @Test
+    void testHadoopDistributedFileStorage(@TempDir Path tempDir) throws ValidationException, RepositoryException {
+        final HdfsRepositoryConfiguration hdfsConfiguration = hdfsConfiguration(Map.of(
+                "hdfs_repository_enabled", "true"
+        ));
+
+        final SearchableSnapshotsConfigurationBean bean = new SearchableSnapshotsConfigurationBean(
+                datanodeConfiguration(Map.of(
+                        "node_search_cache_size", "10gb"
+                )),
+                datanodeDirectories(tempDir),
+                new S3RepositoryConfiguration(),
+                new GCSRepositoryConfiguration(),
+                hdfsConfiguration,
+                () -> new OpensearchUsableSpace(tempDir, 20L * 1024 * 1024 * 1024));
+
+        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams(tempDir));
+
+        Assertions.assertThat(configurationPart.nodeRoles())
+                .contains(OpensearchNodeRole.SEARCH);
+
+        Assertions.assertThat(configurationPart.properties())
+                .containsEntry("node.search.cache.size", "10gb");
+    }
+
+    private OpensearchConfigurationParams emptyBuildParams(Path tempDir) {
+        return new OpensearchConfigurationParams(Collections.emptyList(), Collections.emptyMap(), tempDir);
     }
 
     @Test
-    void testLocalFilesystemRepo(@TempDir Path tempDir) throws ValidationException, RepositoryException {
+    void testLocalFilesystemRepo(@TempDir Path tempDir) throws ValidationException, RepositoryException, IOException {
         // no s3 repo configuration properties given by the user
         final S3RepositoryConfiguration config = s3Configuration(Map.of());
+
+        final String snapshotsPath = Files.createDirectory(tempDir.resolve("snapshots")).toAbsolutePath().toString();
 
         // only path_repo in general datanode configuration
         final SearchableSnapshotsConfigurationBean bean = new SearchableSnapshotsConfigurationBean(
                 datanodeConfiguration(Map.of(
-                        "path_repo", "/mnt/data/snapshots",
+                        "path_repo", snapshotsPath,
                         "node_search_cache_size", "10gb"
                 )),
                 datanodeDirectories(tempDir),
                 config,
                 new GCSRepositoryConfiguration(),
+                new HdfsRepositoryConfiguration(),
                 () -> new OpensearchUsableSpace(tempDir, 20L * 1024 * 1024 * 1024));
 
-        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams());
+        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams(tempDir));
 
         Assertions.assertThat(configurationPart.nodeRoles())
-                .contains(SearchableSnapshotsConfigurationBean.SEARCH_NODE_ROLE);
+                .contains(OpensearchNodeRole.SEARCH);
 
         Assertions.assertThat(configurationPart.keystoreItems())
                 .isEmpty();
 
         Assertions.assertThat(configurationPart.properties())
-                .containsEntry("path.repo", "/mnt/data/snapshots")
+                .containsEntry("path.repo", snapshotsPath)
                 .containsEntry("node.search.cache.size", "10gb");
     }
 
@@ -158,9 +189,10 @@ class SearchableSnapshotsConfigurationBeanTest {
                 datanodeDirectories(tempDir),
                 config,
                 new GCSRepositoryConfiguration(),
+                new HdfsRepositoryConfiguration(),
                 () -> new OpensearchUsableSpace(tempDir, 20L * 1024 * 1024 * 1024));
 
-        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams());
+        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams(tempDir));
 
         Assertions.assertThat(configurationPart.nodeRoles())
                 .isEmpty(); // no search role should be provided
@@ -188,37 +220,41 @@ class SearchableSnapshotsConfigurationBeanTest {
                 datanodeDirectories(tempDir),
                 config,
                 new GCSRepositoryConfiguration(),
+                new HdfsRepositoryConfiguration(),
                 () -> new OpensearchUsableSpace(tempDir, 8L * 1024 * 1024 * 1024));
 
         // 10GB cache requested on 8GB of free space, needs to throw an exception!
-        Assertions.assertThatThrownBy(() -> bean.buildConfigurationPart(emptyBuildParams()))
+        Assertions.assertThatThrownBy(() -> bean.buildConfigurationPart(emptyBuildParams(tempDir)))
                 .isInstanceOf(OpensearchConfigurationException.class)
                 .hasMessageContaining("There is not enough usable space for the node search cache. Your system has only 8gb available");
     }
 
     @Test
-    void testRepoConfigWithoutSearchRole(@TempDir Path tempDir) throws ValidationException, RepositoryException {
+    void testRepoConfigWithoutSearchRole(@TempDir Path tempDir) throws ValidationException, RepositoryException, IOException {
         final S3RepositoryConfiguration config = s3Configuration(Map.of());
+
+        final String snapshotsPath = Files.createDirectory(tempDir.resolve("snapshots")).toAbsolutePath().toString();
 
         // only path_repo in general datanode configuration
         final SearchableSnapshotsConfigurationBean bean = new SearchableSnapshotsConfigurationBean(
                 datanodeConfiguration(Map.of(
                         "node_roles", "cluster_manager,data,ingest,remote_cluster_client",
-                        "path_repo", "/mnt/data/snapshots",
+                        "path_repo", snapshotsPath,
                         "node_search_cache_size", "10gb"
                 )),
                 datanodeDirectories(tempDir),
                 config,
                 new GCSRepositoryConfiguration(),
+                new HdfsRepositoryConfiguration(),
                 () -> new OpensearchUsableSpace(tempDir, 20L * 1024 * 1024 * 1024));
 
-        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams());
+        final DatanodeConfigurationPart configurationPart = bean.buildConfigurationPart(emptyBuildParams(tempDir));
 
         Assertions.assertThat(configurationPart.nodeRoles())
                 .isEmpty(); // no search role should be provided, we have to use only those that are given in the configuration
 
         Assertions.assertThat(configurationPart.properties())
-                .containsEntry("path.repo", "/mnt/data/snapshots")
+                .containsEntry("path.repo", snapshotsPath)
                 .doesNotContainEntry("node.search.cache.size", "10gb");
     }
 
@@ -230,6 +266,12 @@ class SearchableSnapshotsConfigurationBeanTest {
 
     private S3RepositoryConfiguration s3Configuration(Map<String, String> properties) throws RepositoryException, ValidationException {
         final S3RepositoryConfiguration configuration = new S3RepositoryConfiguration();
+        new JadConfig(new InMemoryRepository(properties), configuration).process();
+        return configuration;
+    }
+
+    private HdfsRepositoryConfiguration hdfsConfiguration(Map<String, String> properties) throws RepositoryException, ValidationException {
+        final HdfsRepositoryConfiguration configuration = new HdfsRepositoryConfiguration();
         new JadConfig(new InMemoryRepository(properties), configuration).process();
         return configuration;
     }
