@@ -22,21 +22,22 @@ import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Maps;
-import com.mongodb.BasicDBList;
-import com.mongodb.BasicDBObject;
-import com.mongodb.DBCursor;
-import com.mongodb.DBObject;
-import com.mongodb.QueryBuilder;
-import com.mongodb.WriteResult;
-import com.mongodb.client.model.Projections;
+import com.google.errorprone.annotations.MustBeClosed;
+import com.mongodb.client.result.UpdateResult;
 import jakarta.annotation.Nonnull;
 import jakarta.inject.Inject;
+import org.bson.Document;
+import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
-import org.graylog.security.entities.EntityOwnershipService;
-import org.graylog2.database.MongoConnection;
+import org.graylog.security.entities.EntityRegistrar;
+import org.graylog2.database.MongoCollection;
+import org.graylog2.database.MongoCollections;
+import org.graylog2.database.MongoEntity;
 import org.graylog2.database.NotFoundException;
-import org.graylog2.database.PersistedServiceImpl;
+import org.graylog2.database.entities.EntityScopeService;
+import org.graylog2.database.entities.ImmutableSystemScope;
+import org.graylog2.database.utils.MongoUtils;
+import org.graylog2.database.utils.ScopedEntityMongoUtils;
 import org.graylog2.events.ClusterEventBus;
 import org.graylog2.indexer.IndexSet;
 import org.graylog2.indexer.MongoIndexSet;
@@ -48,18 +49,20 @@ import org.graylog2.plugin.database.users.User;
 import org.graylog2.plugin.streams.Output;
 import org.graylog2.plugin.streams.Stream;
 import org.graylog2.plugin.streams.StreamRule;
+import org.graylog2.rest.models.streams.requests.UpdateStreamRequest;
 import org.graylog2.rest.resources.streams.requests.CreateStreamRequest;
 import org.graylog2.streams.events.StreamDeletedEvent;
+import org.graylog2.streams.events.StreamRenamedEvent;
 import org.graylog2.streams.events.StreamsChangedEvent;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -68,48 +71,65 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static com.mongodb.client.model.Filters.eq;
-import static com.mongodb.client.model.Projections.excludeId;
-import static com.mongodb.client.model.Projections.fields;
-import static com.mongodb.client.model.Projections.include;
+import static com.mongodb.client.model.Filters.in;
+import static com.mongodb.client.model.Updates.addEachToSet;
+import static com.mongodb.client.model.Updates.pull;
+import static com.mongodb.client.model.Updates.set;
+import static org.graylog2.database.utils.MongoUtils.idEq;
+import static org.graylog2.database.utils.MongoUtils.idsIn;
+import static org.graylog2.database.utils.MongoUtils.stream;
+import static org.graylog2.database.utils.MongoUtils.stringIdsIn;
+import static org.graylog2.plugin.streams.Stream.DEFAULT_STREAM_ID;
 import static org.graylog2.shared.utilities.StringUtils.f;
-import static org.graylog2.streams.StreamImpl.FIELD_ID;
+import static org.graylog2.streams.StreamImpl.FIELD_CATEGORIES;
+import static org.graylog2.streams.StreamImpl.FIELD_DISABLED;
 import static org.graylog2.streams.StreamImpl.FIELD_INDEX_SET_ID;
+import static org.graylog2.streams.StreamImpl.FIELD_OUTPUTS;
 import static org.graylog2.streams.StreamImpl.FIELD_TITLE;
 
-public class StreamServiceImpl extends PersistedServiceImpl implements StreamService {
+public class StreamServiceImpl implements StreamService {
     private static final Logger LOG = LoggerFactory.getLogger(StreamServiceImpl.class);
+    private static final String COLLECTION_NAME = "streams";
+    private final MongoCollection<StreamDTO> collection;
+    private final MongoUtils<StreamDTO> mongoUtils;
+    private final ScopedEntityMongoUtils<StreamDTO> scopedMongoUtils;
     private final StreamRuleService streamRuleService;
     private final OutputService outputService;
     private final IndexSetService indexSetService;
     private final MongoIndexSet.Factory indexSetFactory;
-    private final EntityOwnershipService entityOwnershipService;
+    private final EntityRegistrar entityRegistrar;
     private final ClusterEventBus clusterEventBus;
     private final Set<StreamDeletionGuard> streamDeletionGuards;
+    private final EntityScopeService scopeService;
     private final LoadingCache<String, String> streamTitleCache;
+    private Set<String> systemStreamIds;
 
     @Inject
-    public StreamServiceImpl(MongoConnection mongoConnection,
+    public StreamServiceImpl(MongoCollections mongoCollections,
                              StreamRuleService streamRuleService,
                              OutputService outputService,
                              IndexSetService indexSetService,
                              MongoIndexSet.Factory indexSetFactory,
-                             EntityOwnershipService entityOwnershipService,
+                             EntityRegistrar entityRegistrar,
                              ClusterEventBus clusterEventBus,
-                             Set<StreamDeletionGuard> streamDeletionGuards) {
-        super(mongoConnection);
+                             Set<StreamDeletionGuard> streamDeletionGuards,
+                             EntityScopeService scopeService) {
+        this.collection = mongoCollections.collection(COLLECTION_NAME, StreamDTO.class);
+        this.mongoUtils = mongoCollections.utils(collection);
+        this.scopedMongoUtils = mongoCollections.scopedEntityUtils(collection, scopeService);
         this.streamRuleService = streamRuleService;
         this.outputService = outputService;
         this.indexSetService = indexSetService;
         this.indexSetFactory = indexSetFactory;
-        this.entityOwnershipService = entityOwnershipService;
+        this.entityRegistrar = entityRegistrar;
         this.clusterEventBus = clusterEventBus;
         this.streamDeletionGuards = streamDeletionGuards;
+        this.scopeService = scopeService;
 
-        final CacheLoader<String, String> streamTitleLoader = new CacheLoader<String, String>() {
+        final CacheLoader<String, String> streamTitleLoader = new CacheLoader<>() {
             @Nonnull
             @Override
             public String load(@Nonnull String streamId) throws NotFoundException {
@@ -129,11 +149,6 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     }
 
     @Nullable
-    private IndexSet getIndexSet(DBObject dbObject) {
-        return getIndexSet((String) dbObject.get(FIELD_INDEX_SET_ID));
-    }
-
-    @Nullable
     private IndexSet getIndexSet(String id) {
         if (isNullOrEmpty(id)) {
             return null;
@@ -142,66 +157,72 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
         return indexSetConfig.flatMap(c -> Optional.of(indexSetFactory.create(c))).orElse(null);
     }
 
-    public Stream load(ObjectId id) throws NotFoundException {
-        final DBObject o = get(StreamImpl.class, id);
-
-        if (o == null) {
-            throw new NotFoundException("Stream <" + id + "> not found!");
-        }
-
-        final List<StreamRule> streamRules = streamRuleService.loadForStreamId(id.toHexString());
-
-        final Set<Output> outputs = loadOutputsForRawStream(o);
-
-        @SuppressWarnings("unchecked")
-        final Map<String, Object> fields = o.toMap();
-        return new StreamImpl((ObjectId) o.get(StreamImpl.FIELD_ID), fields, streamRules, outputs, getIndexSet(o));
-    }
-
-    @Override
-    public Stream create(Map<String, Object> fields) {
-        return new StreamImpl(fields, getIndexSet((String) fields.get(FIELD_INDEX_SET_ID)));
-    }
-
     @Override
     public Stream create(CreateStreamRequest cr, String userId) {
-        Map<String, Object> streamData = Maps.newHashMap();
-        streamData.put(FIELD_TITLE, cr.title().strip());
-        streamData.put(StreamImpl.FIELD_DESCRIPTION, cr.description());
-        streamData.put(StreamImpl.FIELD_CREATOR_USER_ID, userId);
-        streamData.put(StreamImpl.FIELD_CREATED_AT, Tools.nowUTC());
-        streamData.put(StreamImpl.FIELD_CONTENT_PACK, cr.contentPack());
-        streamData.put(StreamImpl.FIELD_MATCHING_TYPE, cr.matchingType().toString());
-        streamData.put(StreamImpl.FIELD_DISABLED, false);
-        streamData.put(StreamImpl.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream());
-        streamData.put(FIELD_INDEX_SET_ID, cr.indexSetId());
-
-        return create(streamData);
+        return StreamImpl.builder()
+                .id(new ObjectId().toHexString())
+                .title(cr.title().strip())
+                .description(cr.description())
+                .creatorUserId(userId)
+                .createdAt(Tools.nowUTC())
+                .contentPack(cr.contentPack())
+                .matchingType(cr.matchingType())
+                .disabled(true)
+                .removeMatchesFromDefaultStream(cr.removeMatchesFromDefaultStream())
+                .indexSetId(cr.indexSetId())
+                .indexSet(getIndexSet(cr.indexSetId()))
+                .build();
     }
 
     @Override
     public Stream load(String id) throws NotFoundException {
-        try {
-            return load(new ObjectId(id));
-        } catch (IllegalArgumentException e) {
+        List<Stream> singleStream = loadAllByQuery(idEq(id));
+        if (singleStream.isEmpty()) {
             throw new NotFoundException("Stream <" + id + "> not found!");
         }
+        return singleStream.get(0);
     }
 
     @Override
     public List<Stream> loadAllEnabled() {
-        return loadAllEnabled(new HashMap<>());
+        return loadAllByQuery(eq(FIELD_DISABLED, false));
     }
 
-    public List<Stream> loadAllEnabled(Map<String, Object> additionalQueryOpts) {
-        additionalQueryOpts.put(StreamImpl.FIELD_DISABLED, false);
+    @Override
+    public Set<String> getSystemStreamIds(boolean includeDefaultStream) {
+        if (systemStreamIds == null) {
+            try (var stream = streamAllDTOs()) {
+                systemStreamIds = stream
+                        .filter(s -> ImmutableSystemScope.NAME.equals(s.getScope()))
+                        .map(Stream::getId)
+                        .collect(Collectors.toSet());
+            }
+        }
+        return includeDefaultStream ? java.util.stream.Stream.concat(systemStreamIds.stream(),
+                java.util.stream.Stream.of(DEFAULT_STREAM_ID)).collect(Collectors.toSet()) : systemStreamIds;
+    }
 
-        return loadAll(additionalQueryOpts);
+    @Override
+    public boolean isSystemStream(String id) {
+        final StreamDTO dto = mongoUtils.getById(id).orElse(null);
+        if (dto == null) {
+            return false;
+        }
+        return ImmutableSystemScope.NAME.equals(dto.scope());
+    }
+
+    @Override
+    public boolean isEditable(String id) {
+        final StreamDTO dto = mongoUtils.getById(id).orElse(null);
+        if (dto == null) {
+            return true;
+        }
+        return scopeService.isMutable(dto);
     }
 
     @Override
     public List<Stream> loadAllByTitle(String title) {
-        return loadAll(QueryBuilder.start(StreamImpl.FIELD_TITLE).is(title).get());
+        return loadAllByQuery(eq(FIELD_TITLE, title));
     }
 
     @Override
@@ -210,14 +231,8 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
             return Map.of();
         }
 
-        final var streamObjectIds = streamIds.stream().map(ObjectId::new).toList();
-        final var cursor = collection(StreamImpl.class).find(
-                new BasicDBObject("_id", new BasicDBObject("$in", streamObjectIds)),
-                new BasicDBObject("_id", 1).append("title", 1)
-        );
-        try (cursor) {
-            return cursorToList(cursor).stream()
-                    .collect(Collectors.toMap(i -> i.get("_id").toString(), i -> i.get("title").toString()));
+        try (var stream = stream(collection.find(stringIdsIn(streamIds)))) {
+            return stream.collect(Collectors.toMap(MongoEntity::id, StreamDTO::title));
         }
     }
 
@@ -233,19 +248,42 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
 
     @Override
     public List<Stream> loadAll() {
-        return loadAll(Collections.emptyMap());
+        return loadAllByQuery(new Document());
     }
 
-    public List<Stream> loadAll(Map<String, Object> additionalQueryOpts) {
-        final DBObject query = new BasicDBObject(additionalQueryOpts);
-        return loadAll(query);
+    @Override
+    @MustBeClosed
+    public java.util.stream.Stream<String> streamAllIds() {
+        return stream(collection.find()).map(StreamDTO::id);
     }
 
-    private List<Stream> loadAll(DBObject query) {
-        final List<DBObject> results = query(StreamImpl.class, query);
+    @Override
+    @MustBeClosed
+    public java.util.stream.Stream<Stream> streamAllDTOs() {
+        return stream(collection.find())
+                .map(dto -> dto.toBuilder().isEditable(scopeService.isMutable(dto)).build())
+                .map(StreamImpl::fromDTO);
+    }
+
+    @Override
+    @MustBeClosed
+    public java.util.stream.Stream<Stream> streamDTOByIds(Collection<String> streamIds) {
+        return stream(collection.find(stringIdsIn(streamIds)))
+                .map(dto -> dto.toBuilder().isEditable(scopeService.isMutable(dto)).build())
+                .map(StreamImpl::fromDTO);
+    }
+
+    private List<Stream> loadAllByQuery(Bson query) {
+        final List<StreamImpl> results;
+        try (var stream = stream(collection.find(query))) {
+            results = stream
+                    .map(dto -> dto.toBuilder().isEditable(scopeService.isMutable(dto)).build())
+                    .map(StreamImpl::fromDTO)
+                    .toList();
+        }
         final List<String> streamIds = results.stream()
-                .map(o -> o.get(StreamImpl.FIELD_ID).toString())
-                .collect(Collectors.toList());
+                .map(StreamImpl::id)
+                .toList();
         final Map<String, List<StreamRule>> allStreamRules = streamRuleService.loadForStreamIds(streamIds);
 
         final ImmutableList.Builder<Stream> streams = ImmutableList.builder();
@@ -253,7 +291,8 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
         final Map<String, IndexSet> indexSets = indexSetsForStreams(results);
 
         final Set<String> outputIds = results.stream()
-                .map(this::outputIdsForRawStream)
+                .map(StreamImpl::outputIds)
+                .filter(Objects::nonNull)
                 .flatMap(outputs -> outputs.stream().map(ObjectId::toHexString))
                 .collect(Collectors.toSet());
 
@@ -262,45 +301,41 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
                 .collect(Collectors.toMap(Output::getId, Function.identity()));
 
 
-        for (DBObject o : results) {
-            final ObjectId objectId = (ObjectId) o.get(StreamImpl.FIELD_ID);
-            final String id = objectId.toHexString();
+        for (StreamImpl dto : results) {
+            final String id = dto.id();
             final List<StreamRule> streamRules = allStreamRules.getOrDefault(id, Collections.emptyList());
             LOG.debug("Found {} rules for stream <{}>", streamRules.size(), id);
 
-            final Set<Output> outputs = outputIdsForRawStream(o)
-                    .stream()
-                    .map(ObjectId::toHexString)
-                    .map(outputId -> {
-                        final Output output = outputsById.get(outputId);
-                        if (output == null) {
-                            final String streamTitle = Strings.nullToEmpty((String) o.get(FIELD_TITLE));
-                            LOG.warn("Stream \"" + streamTitle + "\" <" + id + "> references missing output <" + outputId + "> - ignoring output.");
-                        }
-                        return output;
-                    })
-                    .filter(Objects::nonNull)
-                    .collect(Collectors.toSet());
+            final Set<Output> outputs = new HashSet<>();
+            if (dto.outputIds() != null) {
+                outputs.addAll(dto.outputIds()
+                        .stream()
+                        .map(ObjectId::toHexString)
+                        .map(outputId -> {
+                            final Output output = outputsById.get(outputId);
+                            if (output == null) {
+                                final String streamTitle = Strings.nullToEmpty(dto.title());
+                                LOG.warn("Stream \"{}\" <{}> references missing output <{}> - ignoring output.", streamTitle, id, outputId);
+                            }
+                            return output;
+                        })
+                        .filter(Objects::nonNull)
+                        .collect(Collectors.toSet()));
+            }
 
-            @SuppressWarnings("unchecked")
-            final Map<String, Object> fields = o.toMap();
-
-            final String indexSetId = (String) fields.get(FIELD_INDEX_SET_ID);
-
-            streams.add(new StreamImpl(objectId, fields, streamRules, outputs, indexSets.get(indexSetId)));
+            streams.add(dto.toBuilder()
+                    .rules(streamRules)
+                    .outputObjects(outputs)
+                    .indexSet(indexSets.get(dto.indexSetId()))
+                    .build());
         }
 
         return streams.build();
     }
 
-    private List<ObjectId> outputIdsForRawStream(DBObject o) {
-        final List<ObjectId> objectIds = (List<ObjectId>) o.get(StreamImpl.FIELD_OUTPUTS);
-        return objectIds == null ? Collections.emptyList() : objectIds;
-    }
-
-    private Map<String, IndexSet> indexSetsForStreams(List<DBObject> streams) {
+    private Map<String, IndexSet> indexSetsForStreams(List<StreamImpl> streams) {
         final Set<String> indexSetIds = streams.stream()
-                .map(stream -> (String) stream.get(FIELD_INDEX_SET_ID))
+                .map(StreamImpl::indexSetId)
                 .filter(s -> !isNullOrEmpty(s))
                 .collect(Collectors.toSet());
         return indexSetService.findByIds(indexSetIds)
@@ -313,18 +348,14 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
         final Set<ObjectId> objectIds = streamIds.stream()
                 .map(ObjectId::new)
                 .collect(Collectors.toSet());
-        final DBObject query = QueryBuilder.start(StreamImpl.FIELD_ID).in(objectIds).get();
 
-        return ImmutableSet.copyOf(loadAll(query));
+        return ImmutableSet.copyOf(loadAllByQuery(idsIn(objectIds)));
     }
 
     @Override
-    public Set<String> mapCategoriesToIds(Collection<String> categories) {
-        final DBObject query = QueryBuilder.start(StreamImpl.FIELD_CATEGORIES).in(categories).get();
-        final DBObject onlyIdField = new BasicDBObject(Projections.include(FIELD_ID).toBsonDocument());
-        try (var cursor = collection(StreamImpl.class).find(query, onlyIdField); var stream = StreamSupport.stream(cursor.spliterator(), false)) {
-            return stream.map(s -> s.get(FIELD_ID).toString()).collect(Collectors.toSet());
-        }
+    @MustBeClosed
+    public java.util.stream.Stream<String> mapCategoriesToIds(Collection<String> categories) {
+        return stream(collection.find(in(FIELD_CATEGORIES, categories))).map(StreamDTO::id);
     }
 
     @Override
@@ -337,113 +368,70 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
                 .filter(s -> !s.startsWith(Stream.DATASTREAM_PREFIX))
                 .map(ObjectId::new)
                 .collect(Collectors.toSet());
-        final DBObject query = QueryBuilder.start(StreamImpl.FIELD_ID).in(objectIds).get();
-        final DBObject onlyIndexSetIdField = new BasicDBObject(Projections.include(FIELD_INDEX_SET_ID).toBsonDocument());
-        Set<String> indexSets = StreamSupport.stream(collection(StreamImpl.class).find(query, onlyIndexSetIdField).spliterator(), false)
-                .map(s -> s.get(FIELD_INDEX_SET_ID).toString())
-                .collect(Collectors.toSet());
-        indexSets.addAll(dataStreamIds);
-        return indexSets;
-    }
-
-    protected Set<Output> loadOutputsForRawStream(DBObject stream) {
-        List<ObjectId> outputIds = outputIdsForRawStream(stream);
-
-        Set<Output> result = new HashSet<>();
-        if (outputIds != null) {
-            for (ObjectId outputId : outputIds) {
-                try {
-                    result.add(outputService.load(outputId.toHexString()));
-                } catch (NotFoundException e) {
-                    LOG.warn("Non-existing output <{}> referenced from stream <{}>!", outputId.toHexString(), stream.get(StreamImpl.FIELD_ID));
-                }
-            }
+        Set<String> indexSets = new HashSet<>(dataStreamIds);
+        try (var stream = stream(collection.find(idsIn(objectIds)))) {
+            indexSets.addAll(stream.map(StreamDTO::indexSetId).collect(Collectors.toSet()));
         }
-
-        return result;
+        return indexSets;
     }
 
     @Override
     public long count() {
-        return totalCount(StreamImpl.class);
+        return collection.countDocuments();
     }
 
     @Override
     public void destroy(Stream stream) throws NotFoundException, StreamGuardException {
-        checkDeletionguards(stream.getId());
+        checkDeletionGuards(stream.getId());
 
         for (StreamRule streamRule : streamRuleService.loadForStream(stream)) {
-            super.destroy(streamRule);
+            streamRuleService.destroy(streamRule);
         }
 
         final String streamId = stream.getId();
         // we need to remove notifications referencing this stream. This happens in the DeletedStreamNotificationListener
         // triggered by the StreamDeletedEvent below.
-        super.destroy(stream);
+        collection.deleteOne(idEq(stream.getId()));
 
         clusterEventBus.post(StreamsChangedEvent.create(streamId));
         clusterEventBus.post(new StreamDeletedEvent(streamId, stream.getTitle()));
-        entityOwnershipService.unregisterStream(streamId);
+        entityRegistrar.unregisterStream(streamId);
     }
 
-    private void checkDeletionguards(String streamId) throws StreamGuardException {
+    private void checkDeletionGuards(String streamId) throws StreamGuardException {
         for (StreamDeletionGuard guard : streamDeletionGuards) {
             guard.checkGuard(streamId);
         }
     }
 
-    public void update(Stream stream, @Nullable String title, @Nullable String description) throws ValidationException {
-        if (title != null) {
-            stream.getFields().put(FIELD_TITLE, title);
-        }
-
-        if (description != null) {
-            stream.getFields().put(StreamImpl.FIELD_DESCRIPTION, description);
-        }
-
-        save(stream);
-    }
-
     @Override
     public void pause(Stream stream) throws ValidationException {
-        stream.setDisabled(true);
-        final String streamId = save(stream);
-        clusterEventBus.post(StreamsChangedEvent.create(streamId));
+        collection.updateOne(idEq(stream.getId()), set(FIELD_DISABLED, true));
+        clusterEventBus.post(StreamsChangedEvent.create(stream.getId()));
     }
 
     @Override
     public void resume(Stream stream) throws ValidationException {
-        stream.setDisabled(false);
-        final String streamId = save(stream);
-        clusterEventBus.post(StreamsChangedEvent.create(streamId));
-    }
-
-    @Override
-    public void addOutput(Stream stream, Output output) {
-        collection(stream).update(
-                db(StreamImpl.FIELD_ID, new ObjectId(stream.getId())),
-                db("$addToSet", new BasicDBObject(StreamImpl.FIELD_OUTPUTS, new ObjectId(output.getId())))
-        );
+        collection.updateOne(idEq(stream.getId()), set(FIELD_DISABLED, false));
         clusterEventBus.post(StreamsChangedEvent.create(stream.getId()));
     }
 
     @Override
     public void addOutputs(ObjectId streamId, Collection<ObjectId> outputIds) {
-        final BasicDBList outputs = new BasicDBList();
-        outputs.addAll(outputIds);
+        final List<ObjectId> outputIdList = new ArrayList<>(outputIds);
 
-        collection(StreamImpl.class).update(
-                db(StreamImpl.FIELD_ID, streamId),
-                db("$addToSet", new BasicDBObject(StreamImpl.FIELD_OUTPUTS, new BasicDBObject("$each", outputs)))
+        collection.updateOne(
+                idEq(streamId),
+                addEachToSet(FIELD_OUTPUTS, outputIdList)
         );
         clusterEventBus.post(StreamsChangedEvent.create(streamId.toHexString()));
     }
 
     @Override
     public void removeOutput(Stream stream, Output output) {
-        collection(stream).update(
-                db(StreamImpl.FIELD_ID, new ObjectId(stream.getId())),
-                db("$pull", new BasicDBObject(StreamImpl.FIELD_OUTPUTS, new ObjectId(output.getId())))
+        collection.updateOne(
+                idEq(stream.getId()),
+                pull(FIELD_OUTPUTS, new ObjectId(output.getId()))
         );
 
         clusterEventBus.post(StreamsChangedEvent.create(stream.getId()));
@@ -452,64 +440,109 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     @Override
     public void removeOutputFromAllStreams(Output output) {
         ObjectId outputId = new ObjectId(output.getId());
-        DBObject match = db(StreamImpl.FIELD_OUTPUTS, outputId);
-        DBObject modify = db("$pull", db(StreamImpl.FIELD_OUTPUTS, outputId));
+        Bson hasOutput = eq(FIELD_OUTPUTS, outputId);
+        Bson pullOutput = pull(FIELD_OUTPUTS, outputId);
 
         // Collect streams that will change before updating them because we don't get the list of changed streams
         // from the upsert call.
         final ImmutableSet<String> updatedStreams;
-        try (final DBCursor cursor = collection(StreamImpl.class).find(match)) {
-            updatedStreams = StreamSupport.stream(cursor.spliterator(), false)
-                    .map(stream -> stream.get(StreamImpl.FIELD_ID))
+        try (var stream = stream(collection.find(hasOutput))) {
+            updatedStreams = stream
+                    .map(StreamDTO::id)
                     .filter(Objects::nonNull)
-                    .map(id -> ((ObjectId) id).toHexString())
                     .collect(ImmutableSet.toImmutableSet());
         }
 
-        collection(StreamImpl.class).update(
-                match, modify, false, true
-        );
+        collection.updateMany(hasOutput, pullOutput);
 
         clusterEventBus.post(StreamsChangedEvent.create(updatedStreams));
     }
 
     @Override
     public List<Stream> loadAllWithIndexSet(String indexSetId) {
-        final Map<String, Object> query = db(FIELD_INDEX_SET_ID, indexSetId);
-        return loadAll(query);
+        return loadAllByQuery(eq(FIELD_INDEX_SET_ID, indexSetId));
     }
 
     @Override
     public void addToIndexSet(String indexSetId, Collection<String> streamIds) {
-        final Set<ObjectId> objectIds = streamIds.stream()
-                .map(ObjectId::new)
-                .collect(Collectors.toSet());
-        final var matchStreamIds = QueryBuilder.start(StreamImpl.FIELD_ID).in(objectIds).get();
-        var updateIndexSets = db("$set", db(FIELD_INDEX_SET_ID, indexSetId));
-        final WriteResult update = collection(StreamImpl.class).update(matchStreamIds, updateIndexSets, false, true);
+        final UpdateResult update = collection.updateMany(stringIdsIn(streamIds), set(FIELD_INDEX_SET_ID, indexSetId));
 
-        if (update.getN() < streamIds.stream().distinct().count()) {
+        if (update.getModifiedCount() < streamIds.stream().distinct().count()) {
             throw new IllegalStateException("Assigning streams " + streamIds + " to index set <" + indexSetId + "> failed!");
         }
     }
 
     @Override
     public String save(Stream stream) throws ValidationException {
-        final String savedStreamId = super.save(stream);
-        clusterEventBus.post(StreamsChangedEvent.create(savedStreamId));
+        final StreamImpl streamImpl = (StreamImpl) stream;
+        final StreamDTO upserted = scopedMongoUtils.upsert(streamImpl.toDTO());
+        clusterEventBus.post(StreamsChangedEvent.create(upserted.id()));
+        return streamImpl.id();
+    }
 
-        return savedStreamId;
+    @Override
+    public Stream update(String streamId, UpdateStreamRequest request) throws NotFoundException, ValidationException {
+        final StreamImpl existingStream = (StreamImpl) load(streamId);
+        final StreamImpl.Builder streamBuilder = existingStream.toBuilder();
+
+        StreamRenamedEvent streamRenamedEvent = null;
+        if (!Strings.isNullOrEmpty(request.title())) {
+            String newTitle = request.title().strip();
+            if (!newTitle.equals(existingStream.getTitle())) {
+                streamRenamedEvent = new StreamRenamedEvent(streamId, existingStream.getTitle(), newTitle);
+                streamBuilder.title(newTitle);
+            }
+        }
+
+        streamBuilder.description(request.description());
+
+        if (request.matchingType() != null) {
+            try {
+                streamBuilder.matchingType(Stream.MatchingType.valueOf(request.matchingType()));
+            } catch (IllegalArgumentException e) {
+                throw new ValidationException("Invalid matching type '" + request.matchingType()
+                        + "' specified. Should be one of: " + Arrays.toString(Stream.MatchingType.values()));
+            }
+        }
+
+        final Boolean removeMatchesFromDefaultStream = request.removeMatchesFromDefaultStream();
+        if (removeMatchesFromDefaultStream != null) {
+            streamBuilder.removeMatchesFromDefaultStream(removeMatchesFromDefaultStream);
+        }
+
+        // Apparently we are sending partial resources sometimes so do not overwrite the index set
+        // id if it's null/empty in the update request.
+        if (!Strings.isNullOrEmpty(request.indexSetId())) {
+            final String requestedIndexSet = request.indexSetId();
+            final IndexSetConfig indexSetConfig = indexSetService.get(requestedIndexSet)
+                    .orElseThrow(() -> new ValidationException("Index set with ID <" + requestedIndexSet + "> does not exist!"));
+
+            if (!indexSetConfig.isWritable()) {
+                throw new ValidationException("Assigned index set must be writable!");
+            }
+            if (!indexSetConfig.isRegularIndex()) {
+                throw new ValidationException("Assigned index set is not usable");
+            }
+            streamBuilder.indexSetId(requestedIndexSet);
+        }
+
+        final Stream updatedStream = streamBuilder.build();
+        save(updatedStream);
+        if (streamRenamedEvent != null) {
+            clusterEventBus.post(streamRenamedEvent);
+        }
+        return updatedStream;
     }
 
     @Override
     public String saveWithRulesAndOwnership(Stream stream, Collection<StreamRule> streamRules, User user) throws ValidationException {
-        final String savedStreamId = super.save(stream);
+        final String savedStreamId = save(stream);
         final Set<StreamRule> rules = streamRules.stream()
                 .map(rule -> streamRuleService.copy(savedStreamId, rule))
                 .collect(Collectors.toSet());
         streamRuleService.save(rules);
 
-        entityOwnershipService.registerNewStream(savedStreamId, user);
+        entityRegistrar.registerNewStream(savedStreamId, user);
         clusterEventBus.post(StreamsChangedEvent.create(savedStreamId));
 
         return savedStreamId;
@@ -517,23 +550,15 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
 
     @Override
     public List<String> streamTitlesForIndexSet(final String indexSetId) {
-        List<String> result = new LinkedList<>();
-        mongoCollection(StreamImpl.class)
-                .find(eq(FIELD_INDEX_SET_ID, indexSetId))
-                .projection(fields(
-                        include(FIELD_TITLE),
-                        excludeId()
-                ))
-                .map(doc -> doc.getString(FIELD_TITLE))
-                .forEach(result::add);
-        return result;
+        try (var stream = stream(collection.find(eq(FIELD_INDEX_SET_ID, indexSetId)))) {
+            return stream.map(StreamDTO::title).toList();
+        }
     }
 
-    private BasicDBObject db(String key, Object value) {
-        return new BasicDBObject(key, value);
-    }
-
-    private BasicDBObject db(Map<String, Object> map) {
-        return new BasicDBObject(map);
+    @Override
+    public Map<String, Long> streamRuleCountByStream() {
+        try (var streamIds = streamAllIds()) {
+            return streamIds.collect(Collectors.toUnmodifiableMap(Function.identity(), streamRuleService::streamRuleCount));
+        }
     }
 }
